[project]
name = "generative-art"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kevin Hunt", email = "huntakev@gmail.com"},
]
dependencies = ["opencv-python==4.10.0.84"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
lint = [
    "ruff==0.8.3",
    "pyright==1.1.390",
]
test = [
    "pytest==8.3.4",
]
